data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_899.wast
;; 10. **Function Call within Loop Modifying Type Stack**:     - Description: Design a loop where `call` instructions modify the type stack, followed by an instruction that relies on the modified stack for further calls.     - Constraint: Ensure the type stack modifications by calls within the loop are correctly handled and maintained.     - Relation: Incorrect type stack management can lead to invalid function calls and disrupted control flow.

(assert_invalid
  (module
    (func $type-stack-call-mod
      (loop 
        (local.get 0)
        (call $dummy_function)
        (i32.const 0)
      )
    )
    (func $dummy_function (param i32) (result i32)
      (i32.add (local.get 0) (i32.const 1))
    )
  )
  "type mismatch"
)